--- a/ybk/templates/user/accounts.html
+++ b/ybk/templates/user/accounts.html
@@ -1,8 +1,8 @@
 {% extends "user/layout.html" %}
 {% block submain %}
 
-<div class="row">
-    <div style="width:120px; margin-left:15px; float: left;">
+<div class="row" style="margin-top: 5px;">
+    <div style="width:120px; margin-left:15px; float: left; margin-top:10px;">
         <div class="list-group">
           <a href="{{ url_for('user.personal_info') }}" class="list-group-item {% if tab == 'personal_info' %}active{% endif %}">
             个人信息 &raquo;
