add change_password page

--- a/ybk/templates/user/change_password.html
+++ b/ybk/templates/user/change_password.html
@@ -58,6 +58,13 @@
 {% block js %}
 <script>
 $(function() {
+  function clearError(){
+    setTimeout(
+      function() {
+        $('.error').text('');
+      },
+    1500);
+  }
   $('input[type=submit]').click(function(e){
     e.preventDefault();
     e.target.blur();
@@ -89,7 +96,7 @@ $(function() {
             clearError();
           } else{
             $.post(
-              "{{ url_for('user.change_password') }}",
+              "{{ url_for('user.change_password_submit') }}",
               {mobile: mobile, password: password, code:code},
               function (data) {
                 if (data.status != 200){
@@ -105,7 +112,7 @@ $(function() {
     }
   })
   function toggleCode(timeout) {
-    var input = $('#change-password-form [name=send-code]')
+    var input = $('[name=send-code]')
     var text = input.text();
     var t;
     if (timeout) {
@@ -127,7 +134,7 @@ $(function() {
       input.prop('disabled', !input.prop('disabled'));
     }
   }
-  $("#change-passowrd-form [name=send-code]").on('click', function(e) {
+  $("[name=send-code]").on('click', function(e) {
     e.preventDefault();
     e.target.blur();
     var mobile = $('#change-password-form [name=mobile]').val();
@@ -136,14 +143,17 @@ $(function() {
       clearError();
     } else {
       $('.error').text('');
+      toggleCode();
       $.post("{{ url_for('api.send_code') }}",
-        {mobile: mobile, type: 'register'},
+        {mobile: mobile, type: 'change_password'},
         function (data){
           if (data.status != 200){
             $('.error').text('发送失败: ' + data.reason);
+            toggleCode();
             clearError();
           } else{
             $('.error').text('');
+            toggleCode();
             toggleCode(90000);
           }
         })
