--- a/ybk/templates/user/change_password_success.html
+++ b/ybk/templates/user/change_password_success.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block css %}
     <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet">
+    <meta http-equiv="refresh" content="1.5;URL='{{ url_for('user.accounts') }}'" />  
 {% endblock %}
 {% block main %}
     <div class="row">
