--- a/ybk/templates/user/login.html
+++ b/ybk/templates/user/login.html
@@ -30,7 +30,7 @@
                     <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="密码">
                   </div>
                   <div class="form-group text-center">
-                    <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
+                    <input type="checkbox" tabindex="3" class="" name="remember" id="remember" checked>
                     <label for="remember"> 记住这次登录</label>
                   </div>
                   <div class="form-group">
@@ -44,7 +44,7 @@
                     <div class="row">
                       <div class="col-lg-12">
                         <div class="text-center">
-                          <a href="#" tabindex="5" id="forgot-password" class="forgot-password">忘记密码?</a>
+                          <a href="{{ url_for('user.change_password') }}" tabindex="5" id="forgot-password" class="forgot-password">忘记密码?</a>
                         </div>
                       </div>
                     </div>
@@ -109,13 +109,6 @@ $(function() {
     $(this).addClass('active');
   });
 
-  $('#forgot-password').click(function(e) {
-    e.preventDefault();
-    e.target.blur();
-    $('.error').text('该功能尚未实现');
-    clearError();
-  })
-
   $(location.hash+'-form-link').trigger('click');
   function clearError(){
     setTimeout(
@@ -140,7 +133,7 @@ $(function() {
                     $('.error').text('登录失败: ' + data.reason);
                 } else {
                     $('.error').text('');
-                    location.href = '{{ next_url }}'
+                    location.href = "{{ url_for('user.accounts') }}";
                 }
                 clearError();
             }
