--- a/ybk/templates/user/investor_info.html
+++ b/ybk/templates/user/investor_info.html
@@ -40,7 +40,7 @@
   </div>
   {% endfor %}
 </div>
-<div class="row">
+<div class="row" style="padding: 10px 20px;">
     <h4> 添加/修改 投资人</h4>
     <hr>
     <form class="form-horizontal" style="zoom: 0.8;">
